[gd_scene load_steps=16 format=2]

[ext_resource path="res://Scenes/Fondo.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/d_alimentos_strip9.png" type="Texture" id=2]
[ext_resource path="res://Sprites/d_chef_strip10.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Alien.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/Menu.gd" type="Script" id=5]
[ext_resource path="res://Sprites/comic.tres" type="DynamicFont" id=6]
[ext_resource path="res://Sounds/intro.wav" type="AudioStream" id=7]
[ext_resource path="res://Sounds/corazonazo.wav" type="AudioStream" id=8]
[ext_resource path="res://Sprites/d_msj_strip8.png" type="Texture" id=9]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 4.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Craneo/Bigote:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 0.9 ), Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Craneo/Bigote:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ), Vector2( 0, -20 ), Vector2( 0, -11 ), Vector2( 0, -20 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Craneo/Gorro:scale")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.1, 0.9 ), Vector2( 1, 1 ), Vector2( 0.9, 1.1 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Craneo:position")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -3, -206 ), Vector2( -11, -211 ), Vector2( -3, -206 ), Vector2( 5, -212 ), Vector2( -3, -206 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cuerpo:scale")
tracks/4/interp = 2
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.05, 1 ), Vector2( 0.95, 1 ), Vector2( 1.05, 1 ), Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Cuerpo:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Cuerpo:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, -149 ), Vector2( 1, -149 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Craneo:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("ManoL:position")
tracks/8/interp = 2
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -86, -128 ), Vector2( -98, -151 ), Vector2( -86, -128 ), Vector2( -67, -111 ), Vector2( -86, -128 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Plato:position")
tracks/9/interp = 2
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0, 1, 2, 3, 4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 120, -214 ), Vector2( 105, -164 ), Vector2( 120, -214 ), Vector2( 139, -268 ), Vector2( 120, -214 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Craneo/Bigote:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Craneo/Bigote:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -20 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Craneo/Gorro:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Craneo:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -3, -206 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Cuerpo:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Cuerpo:rotation_degrees")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Cuerpo:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -38, -143 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Craneo:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("ManoL:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -86, -128 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Plato:position")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 120, -214 ) ]
}

[sub_resource type="Animation" id=3]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 175, 154 ), Vector2( 173, 135 ), Vector2( 175, 154 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.001

[sub_resource type="Animation" id=5]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 689, 123 ), Vector2( 693, 107 ), Vector2( 689, 123 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 689, 123 ) ]
}

[node name="Menu" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Fondo" parent="." instance=ExtResource( 1 )]

[node name="Titulo" type="Label" parent="."]
margin_left = 219.0
margin_top = 125.0
margin_right = 392.0
margin_bottom = 214.0
rect_rotation = 13.2
custom_fonts/font = ExtResource( 6 )
text = "OVNI
CHEF"
align = 1
valign = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Creditos" type="Label" parent="."]
margin_left = 365.0
margin_top = 118.0
margin_right = 728.0
margin_bottom = 345.0
rect_scale = Vector2( 0.666, 0.666 )
custom_fonts/font = ExtResource( 6 )
text = "Cali Game Jam #1 - 2025

Omwekiatl (desarrollador)
Sebas / Larva (voces)
Diana / Momo (idea)

Godot (v1)"
__meta__ = {
"_edit_lock_": true
}

[node name="Chef" type="Node2D" parent="."]
position = Vector2( 183, 611 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pies" type="Sprite" parent="Chef"]
position = Vector2( 6, -83 )
texture = ExtResource( 3 )
hframes = 10
frame = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Cuerpo" type="Sprite" parent="Chef"]
position = Vector2( -38, -143 )
texture = ExtResource( 3 )
hframes = 10
frame = 4
__meta__ = {
"_edit_lock_": true
}

[node name="Craneo" type="Node2D" parent="Chef"]
position = Vector2( -3, -206 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cabeza" type="Sprite" parent="Chef/Craneo"]
position = Vector2( 7, -91 )
texture = ExtResource( 3 )
hframes = 10
__meta__ = {
"_edit_lock_": true
}

[node name="Bigote" type="Sprite" parent="Chef/Craneo"]
position = Vector2( 0, -20 )
texture = ExtResource( 3 )
offset = Vector2( 5, -70 )
hframes = 10
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Nariz" type="Sprite" parent="Chef/Craneo"]
position = Vector2( 7, -91 )
texture = ExtResource( 3 )
hframes = 10
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Gorro" type="Sprite" parent="Chef/Craneo"]
position = Vector2( 2, -95 )
texture = ExtResource( 3 )
offset = Vector2( 5, 5 )
hframes = 10
frame = 3
__meta__ = {
"_edit_lock_": true
}

[node name="ManoL" type="Sprite" parent="Chef"]
position = Vector2( -86, -128 )
rotation = 3.14159
texture = ExtResource( 3 )
offset = Vector2( 20, 0 )
hframes = 10
frame = 8
__meta__ = {
"_edit_lock_": true
}

[node name="Alimento" type="Sprite" parent="Chef/ManoL"]
show_behind_parent = true
position = Vector2( -3, 50 )
rotation = 3.14159
texture = ExtResource( 2 )
hframes = 9
frame = 7
__meta__ = {
"_edit_lock_": true
}

[node name="Plato" type="Sprite" parent="Chef"]
position = Vector2( 120, -214 )
texture = ExtResource( 3 )
offset = Vector2( 20, 0 )
hframes = 10
frame = 9
__meta__ = {
"_edit_lock_": true
}

[node name="Anima" type="AnimationPlayer" parent="Chef"]
playback_speed = 1.37
anims/Idle = SubResource( 1 )
anims/RESET = SubResource( 2 )

[node name="Alien" parent="." instance=ExtResource( 4 )]
position = Vector2( 667, 537 )

[node name="AlienV" parent="." instance=ExtResource( 4 )]
position = Vector2( 583, 648 )

[node name="Alimentos" type="YSort" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Alimento7" type="Sprite" parent="Alimentos"]
position = Vector2( 278, 558 )
texture = ExtResource( 2 )
hframes = 9
frame = 6
__meta__ = {
"_edit_lock_": true
}

[node name="Alimento8" type="Sprite" parent="Alimentos"]
position = Vector2( 303, 613 )
texture = ExtResource( 2 )
hframes = 9
frame = 7
__meta__ = {
"_edit_lock_": true
}

[node name="Alimento9" type="Sprite" parent="Alimentos"]
position = Vector2( 430, 556 )
texture = ExtResource( 2 )
hframes = 9
frame = 8
__meta__ = {
"_edit_lock_": true
}

[node name="Alimento4" type="Sprite" parent="Alimentos"]
position = Vector2( 382, 630 )
texture = ExtResource( 2 )
hframes = 9
frame = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Alimento5" type="Sprite" parent="Alimentos"]
position = Vector2( 258, 636 )
texture = ExtResource( 2 )
hframes = 9
frame = 4
__meta__ = {
"_edit_lock_": true
}

[node name="Alimento6" type="Sprite" parent="Alimentos"]
position = Vector2( 341, 585 )
texture = ExtResource( 2 )
hframes = 9
frame = 5
__meta__ = {
"_edit_lock_": true
}

[node name="Alimento1" type="Sprite" parent="Alimentos"]
position = Vector2( 329, 530 )
texture = ExtResource( 2 )
hframes = 9
__meta__ = {
"_edit_lock_": true
}

[node name="Alimento2" type="Sprite" parent="Alimentos"]
position = Vector2( 384, 553 )
texture = ExtResource( 2 )
hframes = 9
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Alimento3" type="Sprite" parent="Alimentos"]
position = Vector2( 420, 588 )
texture = ExtResource( 2 )
hframes = 9
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="Ayuda" type="Sprite" parent="."]
position = Vector2( 175, 154 )
texture = ExtResource( 9 )
offset = Vector2( 5, 0 )
hframes = 8
frame = 1
__meta__ = {
"_edit_lock_": true
}

[node name="Boton" type="Button" parent="Ayuda"]
self_modulate = Color( 1, 1, 1, 0.00392157 )
margin_left = -50.0
margin_top = -41.0
margin_right = 49.0
margin_bottom = 31.0
__meta__ = {
"_edit_lock_": true
}

[node name="Anima" type="AnimationPlayer" parent="Ayuda"]
playback_speed = 1.26
anims/Idle = SubResource( 3 )
anims/RESET = SubResource( 4 )

[node name="Level" type="Sprite" parent="."]
position = Vector2( 689, 123 )
texture = ExtResource( 9 )
offset = Vector2( 5, 0 )
hframes = 8
frame = 3
__meta__ = {
"_edit_lock_": true
}

[node name="Hard" type="Button" parent="Level"]
self_modulate = Color( 1, 1, 1, 0.00392157 )
margin_left = -50.0
margin_top = -41.0
margin_right = 49.0
margin_bottom = 31.0
__meta__ = {
"_edit_lock_": true
}

[node name="Anima" type="AnimationPlayer" parent="Level"]
playback_speed = 1.11
anims/Idle = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="Reloj" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Respiro" type="Timer" parent="."]
one_shot = true

[node name="Intro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="Voz" type="AudioStreamPlayer" parent="."]

[node name="Musica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[connection signal="pressed" from="Ayuda/Boton" to="." method="_on_Boton_pressed"]
[connection signal="pressed" from="Level/Hard" to="." method="_on_Hard_pressed"]
[connection signal="timeout" from="Reloj" to="." method="_on_Reloj_timeout"]
[connection signal="timeout" from="Respiro" to="." method="_on_Respiro_timeout"]
[connection signal="finished" from="Intro" to="." method="_on_Intro_finished"]
[connection signal="finished" from="Voz" to="." method="_on_Voz_finished"]
